edit path resources